<resources>
    <string name="app_name">NAMARAKUJourney</string>
    <string name="app_name_jp">なまらくじゃーにー</string>
    <string name="button_calc_jp">会計機能\nAccounting</string>
    <string name="button_conv_jp">会話機能\nconversation</string>
    <string name="button_spot_jp">スポット機能\nspot</string>

    <string name="Input_value">金額を入力してください  how much cash</string>
    <string name="yen">yen 円</string>
    <string name="enter">入力してください</string>
    <string name="na">N/A</string>
    <string name="typing">入力中...</string>
    <string name="typed_yen">入力金額</string>
    <string name="ichiman">+　万</string>
    <string name="gosen">+五千</string>
    <string name="sen">+　千</string>
    <string name="gohyaku">+五百</string>
    <string name="hyaku">+　百</string>
    <string name="goju">+五十</string>
    <string name="ju">+　十</string>
    <string name="go">+　五</string>
    <string name="ichi">+　一</string>

    <string name="select_genre">会話のジャンルを選択してください\nPlease select a conversation genre</string>
    <string name="button_gree">挨拶\nGreeting</string>
    <string name="button_dire">道案内\nDirections</string>
    <string name="button_meal">食事\nMeal</string>
    <string name="button_trans">交通手段\nTransportation</string>
    <string name="button_hotel">ホテル\nHotel</string>
    <string name="button_events">イベント\nEvent</string>
    <string name="button_pay">会計\nAccounting</string>
    <string name="button_other">その他\nOther</string>
    <string name="select_content">内容を選んでください</string>
    <string name="content_of_kaiwa_syokuji">I have wheat allergies.\n私は小麦アレルギーがあります。\n\nDoes this contain wheat?\nこれには小麦粉が含まれていますか？</string>
    <string name="content_of_kaiwa_eat_button">How much is this?\nこれはいくらですか？</string>
    <string name="content_of_kaiwa_syokuji2">What are the recomrnded dishes?\nおすすめの料理は何ですか？</string>


    <string name="departure_time">出発日時</string>
    <string name="departure_place">出発地点</string>
    <string name="button_depa_date">日付</string>
    <string name="button_depa_time">時刻</string>
    <string name="button_manual_input">手動入力</string>
    <string name="button_current_location">現在地</string>
    <string name="button_airport">空港</string>
    <string name="button_station">駅</string>

    <string name="select_spot_genre">観光したいジャンルを選択してください</string>
    <string name="hot_spot">話題の観光地</string>
    <string name="button_food">食</string>
    <string name="button_building">建築物</string>
    <string name="button_landscape">風景</string>
    <string name="button_sns">SNS映え</string>
    <string name="button_pilg">聖地巡礼</string>
    <string name="recommended_spot">おすすめの観光地</string>
    <string name="button_ramen">札幌ら～めん共和国</string>
    <string name="title_activity_sub_spot_details">Map</string>

</resources>
