<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubActivity_conv">

    <Button
        android:id="@+id/BUTTON_DIRE"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/conv_button_space"
        android:layout_marginEnd="@dimen/conv_button_space"
        android:text="@string/button_dire"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/BUTTON_GREE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/BUTTON_GREE"
        app:layout_constraintTop_toTopOf="@+id/BUTTON_GREE" />

    <Button
        android:id="@+id/BUTTON_MEAL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/conv_button_space"
        android:text="@string/button_meal"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/BUTTON_HOTEL"
        app:layout_constraintEnd_toStartOf="@+id/BUTTON_TRANS"
        app:layout_constraintStart_toStartOf="@+id/BUTTON_GREE"
        app:layout_constraintTop_toBottomOf="@+id/BUTTON_GREE" />

    <Button
        android:id="@+id/BUTTON_TRANS"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/conv_button_space"
        android:text="@string/button_trans"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/BUTTON_MEAL"
        app:layout_constraintEnd_toEndOf="@+id/BUTTON_DIRE"
        app:layout_constraintStart_toEndOf="@+id/BUTTON_MEAL"
        app:layout_constraintTop_toTopOf="@+id/BUTTON_MEAL" />

    <Button
        android:id="@+id/BUTTON_HOTEL"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/conv_button_space"
        android:text="@string/button_hotel"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/BUTTON_PAY"
        app:layout_constraintEnd_toStartOf="@+id/BUTTON_EVENTS"
        app:layout_constraintStart_toStartOf="@+id/BUTTON_MEAL"
        app:layout_constraintTop_toBottomOf="@+id/BUTTON_MEAL" />

    <Button
        android:id="@+id/BUTTON_GREE"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/conv_button_space"
        android:layout_marginTop="@dimen/conv_button_space"
        android:text="@string/button_gree"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/BUTTON_MEAL"
        app:layout_constraintEnd_toStartOf="@+id/BUTTON_DIRE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/select_genre"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BUTTON_EVENTS"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/conv_button_space"
        android:text="@string/button_events"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/BUTTON_HOTEL"
        app:layout_constraintEnd_toEndOf="@+id/BUTTON_TRANS"
        app:layout_constraintStart_toEndOf="@+id/BUTTON_HOTEL"
        app:layout_constraintTop_toTopOf="@+id/BUTTON_HOTEL" />

    <Button
        android:id="@+id/BUTTON_PAY"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/conv_button_space"
        android:layout_marginBottom="@dimen/conv_button_space"
        android:text="@string/button_pay"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/BUTTON_OTHER"
        app:layout_constraintStart_toStartOf="@+id/BUTTON_HOTEL"
        app:layout_constraintTop_toBottomOf="@+id/BUTTON_HOTEL" />

    <Button
        android:id="@+id/BUTTON_OTHER"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/conv_button_space"
        android:text="@string/button_other"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/BUTTON_PAY"
        app:layout_constraintEnd_toEndOf="@+id/BUTTON_EVENTS"
        app:layout_constraintStart_toEndOf="@+id/BUTTON_PAY"
        app:layout_constraintTop_toTopOf="@+id/BUTTON_PAY" />

</androidx.constraintlayout.widget.ConstraintLayout>