<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubActivity_spot_genre">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorDeparturePlaceBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_spot_genre"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="150dp"
            android:background="@color/colorAccent"
            android:text="@string/hot_spot"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/button14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <Button
            android:id="@+id/button14"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorAccent"
            android:text="@string/button_events"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/button16"
            app:layout_constraintEnd_toStartOf="@+id/BUTTON_FOOD"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button7" />

        <Button
            android:id="@+id/BUTTON_FOOD"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@color/colorAccent"
            android:text="@string/button_food"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/button14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button14"
            app:layout_constraintTop_toTopOf="@+id/button14" />

        <Button
            android:id="@+id/button16"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorAccent"
            android:text="@string/button_building"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/button18"
            app:layout_constraintEnd_toStartOf="@+id/button17"
            app:layout_constraintStart_toStartOf="@+id/button14"
            app:layout_constraintTop_toBottomOf="@+id/button14" />

        <Button
            android:id="@+id/button17"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:background="@color/colorAccent"
            android:text="@string/button_landscape"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/button16"
            app:layout_constraintEnd_toEndOf="@+id/BUTTON_FOOD"
            app:layout_constraintStart_toEndOf="@+id/button16"
            app:layout_constraintTop_toTopOf="@+id/button16" />

        <Button
            android:id="@+id/button18"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:background="@color/colorAccent"
            android:text="@string/button_sns"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button19"
            app:layout_constraintStart_toStartOf="@+id/button16"
            app:layout_constraintTop_toBottomOf="@+id/button16" />

        <Button
            android:id="@+id/button19"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:background="@color/colorAccent"
            android:text="@string/button_pilg"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/button18"
            app:layout_constraintEnd_toEndOf="@+id/button17"
            app:layout_constraintStart_toEndOf="@+id/button18"
            app:layout_constraintTop_toTopOf="@+id/button18" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>