<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/main_button_Xaxis"
        android:layout_height="wrap_content"
        android:text="@string/app_name_jp"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <Button
        android:id="@+id/BUTTON_CALC"
        android:layout_width="@dimen/main_button_Xaxis"
        android:layout_height="@dimen/main_button_Yaxis"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="@dimen/home_button_space"
        android:text="@string/button_calc_jp"
        android:textSize="@dimen/main_button_char_size"
        app:layout_constraintBottom_toTopOf="@+id/BUTTON_CONV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BUTTON_CONV"
        android:layout_width="@dimen/main_button_Xaxis"
        android:layout_height="@dimen/main_button_Yaxis"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="70dp"
        android:text="@string/button_conv_jp"
        android:textSize="@dimen/main_button_char_size"
        app:layout_constraintBottom_toTopOf="@+id/BUTTON_SPOT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BUTTON_SPOT"
        android:layout_width="@dimen/main_button_Xaxis"
        android:layout_height="@dimen/main_button_Yaxis"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="@dimen/home_button_space"
        android:text="@string/button_spot_jp"
        android:textSize="@dimen/main_button_char_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>